# Samples

./: README.md  build_all.sh
Common/PostProcess/YoloV3/include/: FastMath.h  Yolov3Post.h
Common/PostProcess/YoloV3/src/: Yolov3Post.cpp
DecodeImage/: CMakeLists.txt  README.md  README.zh.md  main.cpp
DecodeImage/AclProcess/: AclProcess.cpp  AclProcess.h
DecodeVideo/: CMakeLists.txt  README.md  README.zh.md  main.cpp
DecodeVideo/include/: AclProcess.h  VdecUtils.h
DecodeVideo/src/: AclProcess.cpp  VdecUtils.cpp  VideoReader.cpp
DvppCrop/: CMakeLists.txt  README.md  README.zh.md  main.cpp
EncodeJpeg/: CMakeLists.txt  README.md  README.zh.md  main.cpp
EncodeJpeg/AclProcess/: AclProcess.cpp  AclProcess.h
EncodeJpeg/CommandLine/: CommandLine.h
InferClassification/: CMakeLists.txt  README(Linux).md  README(Linux).zh.md  README(Windows).md  README(Windows).zh.md  build.bat  build.sh  main.cpp
InferClassification/AclProcess/: AclProcess.cpp  AclProcess.h
InferClassification/data/models/: README.md  README.zh.md
InferObjectDetection/: CMakeLists.txt  README(Linux).md  README(Linux).zh.md  README(Windows).md  README(Windows).zh.md  build.bat  build.sh  main.cpp
InferObjectDetection/data/config/: setup.config
InferObjectDetection/data/models/: README.md  README.zh.md
InferObjectDetection/include/: AclProcess.h
InferObjectDetection/src/: AclProcess.cpp
InferOfflineVideo/: CMakeLists.txt  README.md  README.zh.md  build.sh  main.cpp
InferOfflineVideo/Common/: Singleton.cpp  Singleton.h
InferOfflineVideo/Module/DataType/: DataType.h
InferOfflineVideo/Module/ModelInfer/: ModelInfer.cpp  ModelInfer.h
InferOfflineVideo/Module/PostProcess/: PostProcess.cpp  PostProcess.h
InferOfflineVideo/Module/StreamPuller/: StreamPuller.cpp  StreamPuller.h
InferOfflineVideo/Module/VideoDecoder/: VideoDecoder.cpp  VideoDecoder.h
ascendbase/src/Base/AsynLog/: AsynLog.cpp  AsynLog.h
ascendbase/src/Base/CommonDataType/: CommonDataType.h
ascendbase/src/Base/ConfigParser/: ConfigParser.cpp  ConfigParser.h
ascendbase/src/Base/DvppCommon/: DvppCommon.cpp  DvppCommon.h
ascendbase/src/Base/ErrorCode/: ErrorCode.h
ascendbase/src/Base/FileManager/: FileManager.cpp  FileManager.h
ascendbase/src/Base/Framework/ModelProcess/: ModelProcess.cpp  ModelProcess.h
ascendbase/src/Base/Framework/ModuleManager/: ModuleBase.cpp
ascendbase/src/Base/Log/: Log.cpp  Log.h
ascendbase/src/Base/ResourceManager/: ResourceManager.cpp  ResourceManager.h
ascendbase/src/Base/SingleOpProcess/: SingleOpProcess.cpp  SingleOpProcess.h
ascendbase/src/Base/Statistic/: Statistic.cpp  Statistic.h
